--- a/Client_App/Views/Forms/Forms1/Form_11.axaml
+++ b/Client_App/Views/Forms/Forms1/Form_11.axaml
@@ -11,6 +11,7 @@
     xmlns:forms1="clr-namespace:Models.Forms.Form1;assembly=Models"
     xmlns:forms="clr-namespace:Models.Forms;assembly=Models"
 	xmlns:behaviors="using:Avalonia.Xaml.Interactions.Core"
+	xmlns:controls="clr-namespace:Client_App.Controls"
     Title="{Binding WindowTitle}"
     d:DesignHeight="450"
     d:DesignWidth="900"
@@ -53,14 +54,14 @@
 								Height="75" 
 								FontSize="48" 
 								Content="🠕"/>
-						
-						<!--						
-						<Button Grid.Row="1" Content="Поиск"
-								local:YearPickerButtonBehavior.IsEnabled="True"
-								local:YearPickerButtonBehavior.ItemsSource="{Binding Reports.Report_Collection}"
-								local:YearPickerButtonBehavior.SelectedYear="{Binding SelectedYear, Mode=TwoWay}"/>
-								
-							-->
+
+						<!--
+							<controls:SelectReportPopup
+								Grid.Row="1"
+								DataContext="{Binding SelectReportPopupVM}"
+								HorizontalAlignment="Center"
+								VerticalAlignment="Center"/>
+						-->
 						
 						<Button Command="{Binding SwitchToPreviousReport}"
 								Grid.Row="2" 
@@ -783,7 +784,7 @@
 				  ColumnDefinitions="Auto,Auto,Auto,Auto">
 				<TextBlock Text="Текущая страница"
 					Grid.Row="0" Grid.Column="0" Margin="5"/>
-				<NumericUpDown Value="{Binding CurrentPage}" Minimum="1"
+				<NumericUpDown Value="{Binding CurrentPage}" Increment="-1"
 					Grid.Row="0" Grid.Column="1" Margin="5">
 					<interactivity:Interaction.Behaviors>
 						<local:NumericUpDownDigitValidationBehavior/>
