--- a/Client_App/Views/Forms/Forms1/Form_11.axaml
+++ b/Client_App/Views/Forms/Forms1/Form_11.axaml
@@ -16,7 +16,9 @@
     d:DesignWidth="900"
     x:DataType="vm:Form_11VM"
     mc:Ignorable="d"
+	KeyUp="DataGrid_KeyDown"
 	x:Name="1.1"
+    
 	WindowStartupLocation="CenterScreen"
 	MinWidth="800" MinHeight="600">
 
@@ -80,8 +82,7 @@
 								Classes="buttonOnly"  
 								Grid.Column="2"
 								SelectedDate="{Binding Report.StartPeriod.Value, Converter={StaticResource DateConverter}}"
-								Watermark="дд.мм.гггг"
-								/>
+								Watermark="дд.мм.гггг"/>
 						</Grid>
 
 						<Grid ColumnDefinitions="*,*,*"  Grid.Row="1">
@@ -169,47 +170,46 @@
 			<Grid x:Name="Table" RowDefinitions="Auto,*" ColumnDefinitions="Auto">
 				<Grid.ContextMenu>
 					<ContextMenu DataContext="{Binding DataContext, ElementName=dataGrid}">
-						<MenuItem Header="Выделить всё				Ctrl+A"
-								  Command="{Binding SelectAll}"
-								  IsHitTestVisible="True"
-								  HotKey="Ctrl+A"/>
-						<MenuItem Header="Добавить строку			Ctrl+T"
-								  Command="{Binding AddRow}"
-								  HotKey="Ctrl+T"/>
-						<MenuItem Header="Добавить N строк			Ctrl+N"
-								  Command="{Binding AddRows}"
-								  HotKey="Ctrl+N"/>
-						<MenuItem Header="Добавить N строк перед	Ctrl+I"
-								  Command="{Binding AddRowsIn}"
-								  CommandParameter="{Binding SelectedForms}"
-								  HotKey="Ctrl+I"/>
-						<MenuItem Header="Копировать				Ctrl+C"
-								  Command="{Binding CopyRows}"
-								  CommandParameter="{Binding SelectedForms}"
-								  HotKey="Ctrl+C"/>
-
-						<MenuItem Header="Вставить					Ctrl+V"
-								  Command="{Binding PasteRows}"
-								  HotKey="Ctrl+V"/>
-						<MenuItem Header="Удалить выбранные строчки	Ctrl+D"
-								  Command="{Binding DeleteRows}"
-								  CommandParameter="{Binding SelectedForms}"
-								  HotKey="Ctrl+D"/>
-						<MenuItem Header="Выставить номер			Ctrl+O"
-								  Command="{Binding SetNumberOrder}"
-								  HotKey="Ctrl+O"/>
+						<MenuItem Header="Выделить всё"
+                                  Command="{Binding SelectAll}"
+                                  IsHitTestVisible="True"
+                                  InputGesture="Ctrl+A"/>
+                        <MenuItem Header="Добавить строку"
+                                  Command="{Binding AddRow}"
+                                  InputGesture="Ctrl+T"/>
+                        <MenuItem Header="Добавить N строк"
+                                  Command="{Binding AddRows}"
+                                  InputGesture="Ctrl+N"/>
+                        <MenuItem Header="Добавить N строк перед"
+                                  Command="{Binding AddRowsIn}"
+                                  CommandParameter="{Binding SelectedForms}"
+                                  InputGesture="Ctrl+I"/>
+                        <MenuItem Header="Копировать"
+                                  Command="{Binding CopyRows}"
+                                  CommandParameter="{Binding SelectedForms}"
+                                  InputGesture="Ctrl+C"/>
+                        <MenuItem Header="Вставить"
+                                  Command="{Binding PasteRows}"
+                                  InputGesture="Ctrl+V"/>
+                        <MenuItem Header="Удалить выбранные строчки"
+                                  Command="{Binding DeleteRows}"
+                                  CommandParameter="{Binding SelectedForms}"
+                                  InputGesture="Ctrl+D"/>
+                        <MenuItem Header="Выставить номер"
+                                  Command="{Binding SetNumberOrder}"
+                                  InputGesture="Ctrl+O"/>
 						<!--<MenuItem Header="Сортировать по номеру п/п	Ctrl+L"
                                       Command="{Binding SortForms}"
                                       HotKey="Ctrl+L"/> -->
-						<MenuItem Header="Очистить строчки	        Ctrl+K"
+						<MenuItem Header="Очистить строчки"
 								  Command="{Binding DeleteDataInRows}"
-								  CommandParameter="{Binding SelectedForms}"
-								  HotKey="Ctrl+K"/>
+                                  CommandParameter="{Binding SelectedForms}"
+                                  InputGesture="Ctrl+K"/>
                         <MenuItem Header="Рассчитать категорию"
                                   Command="{Binding CategoryCalculationFromReport}"
                                   CommandParameter="{Binding SelectedForms}"
                                   HotKey="Ctrl+K"/>
-						<MenuItem Header="Перевести РВ в РАО        Ctrl+J"
+						<MenuItem Header="Перевести РВ в РАО"
 								  Command="{Binding SourceTransmission}"
 								  CommandParameter="{Binding SelectedForm}"
 								  HotKey="Ctrl+J"/>
@@ -317,6 +317,7 @@
 				<DataGrid
 					Grid.Row="1"
 					Classes="table"
+					x:CompileBindings="True"
 					x:Name="dataGrid"
 					Items="{Binding FormList}"
 					SelectedItem="{Binding SelectedForm}">
@@ -332,8 +333,6 @@
 						<DataGridTextColumn Binding="{Binding NumberInOrder.Value}"
 											Width="40"
 											IsReadOnly="True"
-											x:CompileBindings="True"
-											
 											x:DataType="forms1:Form11">
 							<DataGridTextColumn.HeaderTemplate>
 								<DataTemplate>
@@ -361,7 +360,7 @@
 							</DataGridTemplateColumn.HeaderTemplate>
 							
 							<DataGridTemplateColumn.CellTemplate>
-								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form11">
+								<DataTemplate x:DataType="forms1:Form11">
 									<TextBox Text="{Binding OperationCode.Value, Mode=TwoWay}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
@@ -379,7 +378,7 @@
 								</DataTemplate>
 							</DataGridTemplateColumn.HeaderTemplate>
 							<DataGridTemplateColumn.CellTemplate>
-								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form11">
+								<DataTemplate x:DataType="forms1:Form11">
 									<Grid ColumnDefinitions="*,Auto">
 										<TextBox Grid.Column="0" Text="{Binding OperationDate.Value, Mode=TwoWay}"/>
 										<CalendarDatePicker Classes="buttonOnly"  Grid.Column="1"
@@ -402,7 +401,7 @@
 							</DataGridTemplateColumn.HeaderTemplate>
 							
 							<DataGridTemplateColumn.CellTemplate>
-								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form11">
+								<DataTemplate x:DataType="forms1:Form11">
 									<TextBox Text="{Binding PassportNumber.Value, Mode=TwoWay}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
@@ -421,7 +420,7 @@
 							</DataGridTemplateColumn.HeaderTemplate>
 							
 							<DataGridTemplateColumn.CellTemplate>
-								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form11">
+								<DataTemplate x:DataType="forms1:Form11">
 									<TextBox Text="{Binding Type.Value, Mode=TwoWay}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
@@ -440,7 +439,7 @@
 							</DataGridTemplateColumn.HeaderTemplate>
 							
 							<DataGridTemplateColumn.CellTemplate>
-								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form11">
+								<DataTemplate x:DataType="forms1:Form11">
 									<TextBox Text="{Binding Radionuclids.Value, Mode=TwoWay}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
@@ -459,7 +458,7 @@
 							</DataGridTemplateColumn.HeaderTemplate>
 							
 							<DataGridTemplateColumn.CellTemplate>
-								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form11">
+								<DataTemplate x:DataType="forms1:Form11">
 									<TextBox Text="{Binding FactoryNumber.Value, Mode=TwoWay}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
@@ -478,7 +477,7 @@
 							</DataGridTemplateColumn.HeaderTemplate>
 							
 							<DataGridTemplateColumn.CellTemplate>
-								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form11">
+								<DataTemplate x:DataType="forms1:Form11">
 									<TextBox Text="{Binding Quantity.Value, Mode=TwoWay}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
@@ -497,7 +496,7 @@
 							</DataGridTemplateColumn.HeaderTemplate>
 							
 							<DataGridTemplateColumn.CellTemplate>
-								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form11">
+								<DataTemplate x:DataType="forms1:Form11">
 									<TextBox Text="{Binding Activity.Value, Mode=TwoWay}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
@@ -516,7 +515,7 @@
 							</DataGridTemplateColumn.HeaderTemplate>
 							
 							<DataGridTemplateColumn.CellTemplate>
-								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form11">
+								<DataTemplate x:DataType="forms1:Form11">
 									<TextBox Text="{Binding CreatorOKPO.Value, Mode=TwoWay}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
@@ -535,7 +534,7 @@
 							</DataGridTemplateColumn.HeaderTemplate>
 							
 							<DataGridTemplateColumn.CellTemplate>
-								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form11">
+								<DataTemplate x:DataType="forms1:Form11">
 									<Grid ColumnDefinitions="*,Auto">
 										<TextBox Grid.Column="0" Text="{Binding CreationDate.Value, Mode=TwoWay}"/>
 										<CalendarDatePicker Classes="buttonOnly"  Grid.Column="1"
@@ -558,7 +557,7 @@
 							</DataGridTemplateColumn.HeaderTemplate>
 							
 							<DataGridTemplateColumn.CellTemplate>
-								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form11">
+								<DataTemplate x:DataType="forms1:Form11">
 									<TextBox Text="{Binding Category.Value, Mode=TwoWay}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
@@ -577,7 +576,7 @@
 							</DataGridTemplateColumn.HeaderTemplate>
 							
 							<DataGridTemplateColumn.CellTemplate>
-								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form11">
+								<DataTemplate x:DataType="forms1:Form11">
 									<TextBox Text="{Binding SignedServicePeriod.Value, Mode=TwoWay}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
@@ -596,7 +595,7 @@
 							</DataGridTemplateColumn.HeaderTemplate>
 							
 							<DataGridTemplateColumn.CellTemplate>
-								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form11">
+								<DataTemplate x:DataType="forms1:Form11">
 									<TextBox Text="{Binding PropertyCode.Value, Mode=TwoWay}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
@@ -615,7 +614,7 @@
 							</DataGridTemplateColumn.HeaderTemplate>
 							
 							<DataGridTemplateColumn.CellTemplate>
-								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form11">
+								<DataTemplate x:DataType="forms1:Form11">
 									<TextBox Text="{Binding Owner.Value, Mode=TwoWay}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
@@ -634,7 +633,7 @@
 							</DataGridTemplateColumn.HeaderTemplate>
 							
 							<DataGridTemplateColumn.CellTemplate>
-								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form11">
+								<DataTemplate x:DataType="forms1:Form11">
 									<TextBox Text="{Binding DocumentVid.Value, Mode=TwoWay}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
@@ -653,7 +652,7 @@
 							</DataGridTemplateColumn.HeaderTemplate>
 							
 							<DataGridTemplateColumn.CellTemplate>
-								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form11">
+								<DataTemplate x:DataType="forms1:Form11">
 									<TextBox Text="{Binding DocumentNumber.Value, Mode=TwoWay}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
@@ -672,7 +671,7 @@
 							</DataGridTemplateColumn.HeaderTemplate>
 							
 							<DataGridTemplateColumn.CellTemplate>
-								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form11">
+								<DataTemplate x:DataType="forms1:Form11">
 									<Grid ColumnDefinitions="*,Auto">
 										<TextBox Grid.Column="0" Text="{Binding DocumentDate.Value, Mode=TwoWay}"/>
 										<CalendarDatePicker Classes="buttonOnly"  Grid.Column="1"
@@ -695,7 +694,7 @@
 							</DataGridTemplateColumn.HeaderTemplate>
 							
 							<DataGridTemplateColumn.CellTemplate>
-								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form11">
+								<DataTemplate x:DataType="forms1:Form11">
 									<TextBox Text="{Binding ProviderOrRecieverOKPO.Value, Mode=TwoWay}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
@@ -714,7 +713,7 @@
 							</DataGridTemplateColumn.HeaderTemplate>
 							
 							<DataGridTemplateColumn.CellTemplate>
-								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form11">
+								<DataTemplate x:DataType="forms1:Form11">
 									<TextBox Text="{Binding TransporterOKPO.Value, Mode=TwoWay}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
@@ -733,7 +732,7 @@
 							</DataGridTemplateColumn.HeaderTemplate>
 							
 							<DataGridTemplateColumn.CellTemplate>
-								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form11">
+								<DataTemplate x:DataType="forms1:Form11">
 									<TextBox Text="{Binding PackName.Value, Mode=TwoWay}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
@@ -752,7 +751,7 @@
 							</DataGridTemplateColumn.HeaderTemplate>
 							
 							<DataGridTemplateColumn.CellTemplate>
-								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form11">
+								<DataTemplate x:DataType="forms1:Form11">
 									<TextBox Text="{Binding PackType.Value, Mode=TwoWay}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
@@ -771,7 +770,7 @@
 							</DataGridTemplateColumn.HeaderTemplate>
 							
 							<DataGridTemplateColumn.CellTemplate>
-								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form11">
+								<DataTemplate x:DataType="forms1:Form11">
 									<TextBox Text="{Binding PackNumber.Value, Mode=TwoWay}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
@@ -838,6 +837,7 @@
 					</StackPanel.ContextMenu>
 					<TextBlock Margin="5">Примечания</TextBlock>
 					<DataGrid Classes="notesTable"
+							  x:CompileBindings="True"
 							  Items="{Binding NoteList}"
 							  SelectedItem="{Binding SelectedNote}">
 						<interactivity:Interaction.Behaviors>
@@ -848,7 +848,7 @@
 						<DataGrid.Columns>
 							<DataGridTemplateColumn Header="№ строки" Width="80">
 								<DataGridTemplateColumn.CellTemplate>
-									<DataTemplate x:CompileBindings="True" x:DataType="forms:Note">
+									<DataTemplate x:DataType="forms:Note">
 										<TextBox Text="{Binding RowNumber.Value, Mode=TwoWay}"/>
 									</DataTemplate>
 								</DataGridTemplateColumn.CellTemplate>
@@ -856,7 +856,7 @@
 
 							<DataGridTemplateColumn Header="№ графы" Width="80">
 								<DataGridTemplateColumn.CellTemplate>
-									<DataTemplate x:CompileBindings="True" x:DataType="forms:Note">
+									<DataTemplate x:DataType="forms:Note">
 										<TextBox Text="{Binding GraphNumber.Value, Mode=TwoWay}"/>
 									</DataTemplate>
 								</DataGridTemplateColumn.CellTemplate>
@@ -864,7 +864,7 @@
 
 							<DataGridTemplateColumn Header="Пояснения" Width="*">
 								<DataGridTemplateColumn.CellTemplate>
-									<DataTemplate x:CompileBindings="True" x:DataType="forms:Note">
+									<DataTemplate x:DataType="forms:Note">
 										<TextBox Text="{Binding Comment.Value, Mode=TwoWay}"/>
 									</DataTemplate>
 								</DataGridTemplateColumn.CellTemplate>
