--- a/Client_App/Views/Forms/NewCheckForm.axaml
+++ b/Client_App/Views/Forms/NewCheckForm.axaml
@@ -17,6 +17,15 @@
     <Design.DataContext>
         <vm:NewCheckFormVM/>
     </Design.DataContext>
+	<Window.Styles>
+		<Style Selector="DataGridCell:pointerover">
+			<Setter Property="Background" Value="Transparent"/>
+		</Style>
+
+		<Style Selector="DataGridCell:selected">
+			<Setter Property="Background" Value="Transparent"/>
+		</Style>
+	</Window.Styles>
 
     <Grid RowDefinitions="40,*">
         <Grid Row="0">
